<resources>
    <string name="app_name">SynkNote</string>
    <string name="action_settings">Settings</string>
    <string name="synknote" translatable="false">SynkNote</string>
    <string name="document_name">Document Name</string>
    <string name="bold" translatable="false"><![CDATA[Bold>]]></string>
    <string name="title_activity_editor_tabbed" translatable="false">EditorTabbed</string>
    <string name="section_format" translatable="false">Hello World from section: %1$d</string>
    <string name="title_activity_tabbed_editor" translatable="false">tabbedEditor</string>
    <string name="tab_text_1" translatable="false">Tab 1</string>
    <string name="tab_text_2" translatable="false">Tab 2</string>
    <string name="tab_text_3" translatable="false">Tab 3</string>
    <string name="document">Document</string>
    <string name="markup" translatable="false">Markup</string>
    <string name="title">Title</string>
    <string name="date" translatable="false">00/00</string>
    <string name="delete">delete</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations" translatable="false">Enable social recommendations</string>
    <string name="pref_description_social_recommendations" translatable="false">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name" translatable="false">Display name</string>
    <string name="pref_default_display_name" translatable="false">John Smith</string>

    <string name="pref_title_add_friends_to_messages" translatable="false">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync" translatable="false">Data &amp; sync</string>

    <string name="pref_title_sync_frequency" translatable="false">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings" translatable="false">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications" translatable="false">Notifications</string>

    <string name="pref_title_new_message_notifications" translatable="false">New message notifications</string>

    <string name="pref_title_ringtone" translatable="false">Ringtone</string>
    <string name="pref_ringtone_silent" translatable="false">Silent</string>

    <string name="pref_title_vibrate" translatable="false">Vibrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="password_lock">Password Lock</string>
    <string name="use_dark_theme">Use Dark Theme</string>
    <string name="language">Language</string>
    <string name="appearance">Appearance</string>
    <string name="security">Security</string>
    <string name="use_custom_encryption_key">Use Custom Encryption Key</string>
    <string name="encryption_key">Encryption key…</string>
    <string name="password">Password…</string>
    <string name="local_folder">Local Folder</string>
    <string name="encrypt_files">Encrypt Files</string>
    <string name="rename">Rename</string>
    <string name="pin">Pin</string>
    <string name="Delete">Delete</string>
    <string name="setPassword">Set Password</string>
    <string name="changeTheme">Change Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="lightTheme">Light Theme</string>
    <string name="full_dark_theme">Full Dark Theme</string>
    <string name="orange_theme">Orange Theme</string>
    <string name="not_logged_in">Not Logged In</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="navigation_drawer_open">Open Drawer</string>
    <string name="navigation_drawer_close">Close Drawer Drawer</string>
    <string name="loginRegister">Login / Register</string>
    <string name="add_notebook">Add Notebook...</string>
    <string name="notebook_name">Notebook Name</string>
    <string name="notebook_location">Notebook Location (optional)</string>
    <string name="notebooks">Notebooks</string>
    <string name="edit_notebook">Edit Notebook</string>
    <string name="email">Email</string>
    <string name="passwordInput">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="loggedIn">Logged In</string>
    <string name="logout">Logout</string>
    <string name="refresh">Refresh</string>
</resources>
