<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    android:background="?attr/colorPrimary">


    <TextView
        android:id="@+id/logged_in_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:paddingEnd="20dp"
        android:text="@string/not_logged_in"
        android:textColor="@color/colorBackgroundLight"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingTop="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/logout_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:backgroundTint="?attr/colorPrimaryDark"
                android:text="@string/logout"
                android:textColor="@color/colorBackgroundLight"
                android:visibility="gone" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="?attr/colorPrimaryDark"
                android:text="@string/login"
                android:textColor="@color/colorBackgroundLight" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:backgroundTint="?attr/colorPrimaryDark"
                android:text="@string/register"
                android:textColor="@color/colorBackgroundLight" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>